--- a/main.kv
+++ b/main.kv
@@ -3,7 +3,7 @@
 MDBoxLayout:
     orientation: 'vertical'
     MDToolbar:
-        title: "DarkMatter Houses"
+        title: "DarkMatter Real Estate"
         right_action_items: [['magnify', lambda x: app.search_menu.open()]]
         md_bg_color: app.theme_cls.primary_color
     MapViewClass:
